tests/idris2/error/error034/WhereError.idr
blah : Nat
blah = 3
    where
        fox : ()
        foo = ()
